--- a/index.html
+++ b/index.html
@@ -7,20 +7,40 @@
         <title>Etch-A-Sketch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="./img/fish-favicon.png">
+        <link href="https://fonts.cdnfonts.com/css/ocr-a-std" rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css">
         <script src="./js/etch-a-sketch.js" defer></script>
     </head>
 
     <body>
         <div class="header">
-
+            <h1>Etch-A-Sketch</h1>
         </div>
 
-        <div class="body">
+        <div class="content">
+
+            <div class="settings-container">
+                <div class="slide-container">
+                    <input type="range" min="1" max="100" value="16" class="slider">
+                </div>
+                <p> Grid Array: <span class="value"></span></p>
+            </div>
+
+            <div class="squares-container">
+
+            </div>
 
         </div>
 
         <div class="footer">
+
+            <div class="copyright">
+                &#169; The Electronic Fish
+            </div>
+
+            <a target="_blank" href="https://github.com/TheElectronicFish">
+                <img src="./img/github-icon-cropped.png" alt="My github link">
+            </a>
 
         </div>
     </body>
