Add functions for square creation

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
         <div class="content">
 
             <div class="settings-container">
-                <div class="slide-container">
-                    <input type="range" min="1" max="100" value="16" class="slider">
+                <div>
+                    <div class="slide-container">
+                        <input type="range" min="1" max="100" value="16" class="slider">
+                    </div>
                 </div>
                 <p> Grid Array: <span class="value"></span></p>
             </div>
 
-            <div class="squares-container">
+            <div class="drawing-container">
 
             </div>
 
