--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="content">
 
             <div class="settings-container">
-                <div>
-                    <div class="slide-container">
-                        <input type="range" min="1" max="100" value="16" class="slider">
-                    </div>
+
+                <div class="slide-container">
+                    <input type="range" min="1" max="100" value="16" class="slider">
                 </div>
+
                 <p> Grid Array: <span class="value"></span></p>
             </div>
 
-            <div class="drawing-container">
+            <div class="grid">
 
             </div>
 
