--- a/index.html
+++ b/index.html
@@ -26,10 +26,24 @@
                 </div>
 
                 <p> Grid Array: <span class="value"></span></p>
+
+            <div class="option-container">
+                <button>Black</button>
+                <div class="color-container">
+                    <button>
+                        Color
+                    </button>
+                    <label for=".color">Select a color</label>
+                    <input type="color" class="color" value="#465448">
+                </div>
+                <button>Shading</button>
+                <button>Rainbow</button>
+            </div>
+
+            <
             </div>
 
             <div class="grid">
-
             </div>
 
         </div>
