--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                     <label for=".color">Select a color</label>
                     <input type="color" class="color" value="#465448">
                 </div>
-                <button>Shading</button>
-                <button>Rainbow</button>
+                <button class="shading">Shading</button>
+                <button class="rainbow">Rainbow</button>
+                <button class="clear">Clear</button>
             </div>
 
-            <
+            
             </div>
 
             <div class="grid">
