--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
                 <p> Grid Array: <span class="value"></span></p>
 
             <div class="option-container">
-                <button>Black</button>
+                <button class="black">Black</button>
                 <div class="color-container">
-                    <button>
-                        Color
-                    </button>
+                    <button type="button" class="color">Color</button>
                     <label for=".color">Select a color</label>
-                    <input type="color" class="color" value="#465448">
+                    <input type="color" class="colorSelector" value="#465448">
                 </div>
                 <button class="shading">Shading</button>
                 <button class="rainbow">Rainbow</button>
+                <button class="border">Border</button>
                 <button class="clear">Clear</button>
             </div>
 
