Complete click and holding events for color modes

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                     <input type="color" class="colorSelector" value="#465448">
                 </div>
                 <button class="shading">Shading</button>
+                <button class="lighten">Lighten</button>
                 <button class="rainbow">Rainbow</button>
                 <button class="border">Border</button>
+                <button class="eraser">Eraser</button>
                 <button class="clear">Clear</button>
             </div>
 
